Refactor version comparison and error handling logic.
Improved dependency version update checks to optimize logic for minor updates. Refactored exception handling and redundant code in various classes, enhancing consistency and readability.